[gd_scene load_steps=23 format=3 uid="uid://d0e46tu4mvqvo"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_bsl8x"]
[ext_resource type="Texture2D" uid="uid://coq2whsihvsi7" path="res://art/mouse_sprites.png" id="2_x0r08"]
[ext_resource type="Texture2D" uid="uid://bpvn62q8pw6nr" path="res://art/mouse_die_anim.png" id="3_vdopi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hdxk5"]
atlas = ExtResource("3_vdopi")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uca8l"]
atlas = ExtResource("3_vdopi")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_500gc"]
atlas = ExtResource("3_vdopi")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n1lg"]
atlas = ExtResource("3_vdopi")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8lll"]
atlas = ExtResource("3_vdopi")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uhba"]
atlas = ExtResource("3_vdopi")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hivg"]
atlas = ExtResource("3_vdopi")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tnik"]
atlas = ExtResource("3_vdopi")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qwfc"]
atlas = ExtResource("2_x0r08")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytw71"]
atlas = ExtResource("2_x0r08")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfi6g"]
atlas = ExtResource("2_x0r08")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_venym"]
atlas = ExtResource("2_x0r08")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y02nu"]
atlas = ExtResource("2_x0r08")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bep8i"]
atlas = ExtResource("2_x0r08")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3kpm"]
atlas = ExtResource("2_x0r08")
region = Rect2(96, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jimh4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdxk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uca8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_500gc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n1lg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8lll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uhba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hivg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tnik")
}],
"loop": true,
"name": &"death_anim",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qwfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytw71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfi6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_venym")
}],
"loop": true,
"name": &"mouse_idle_anim",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y02nu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bep8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3kpm")
}],
"loop": true,
"name": &"mouse_walk_anim",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7qj3k"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jivpv"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lo883"]

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_bsl8x")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jimh4")
animation = &"death_anim"
offset = Vector2(0, -5)

[node name="detect_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_area"]
shape = SubResource("CircleShape2D_7qj3k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_jivpv")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_lo883")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.6

[node name="enemy_healthbar" type="ProgressBar" parent="."]
modulate = Color(0.305882, 0.686275, 0.0588235, 1)
offset_left = -6.0
offset_top = -9.0
offset_right = 96.0
offset_bottom = 8.0
rotation = 1.5708
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="enemy_regen_time" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="detect_area" to="." method="_on_detect_area_body_entered"]
[connection signal="body_exited" from="detect_area" to="." method="_on_detect_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="enemy_regen_time" to="." method="_on_enemy_regen_time_timeout"]
